<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="clear">C</string>
    <string name="result">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="O">O</string>
    <string name="X">X</string>
    <string name="Player">I would like to play with (X)</string>
    <string name="Start">I would like to start the game</string>
    <string name="Play">Play</string>
    <string name="Reset">Reset</string>
    <string name="HumanPlayer">Human Player</string>
    <string name="ComputerPlayer">Computer Player</string>
    <string name="Draws">Draws</string>
    <string name="Empty"></string>



</resources>
