<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutR0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="16dp"
        android:background="#303F9F"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button00"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button01"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button02"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutR1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#303F9F"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutR0">

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutR2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#303F9F"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutR1">

        <Button
            android:id="@+id/button20"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button21"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button22"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="@string/Empty"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPlayReset"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonReset"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Reset" />

        <Button
            android:id="@+id/buttonPlay"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Play" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutScores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutPlayReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewHPwins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="0"
            android:ems="10"
            android:text="@string/O"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewTie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="0"
            android:ems="10"
            android:text="@string/O"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewUCWins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="0"
            android:ems="10"
            android:text="@string/O"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutTitles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutScores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewTitleHP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/HumanPlayer"
            android:textAlignment="textStart"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewTitleDraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Draws"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textViewTitleUC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ComputerPlayer"
            android:textAlignment="textEnd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSwitches"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/switchXSelected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Player"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/switchWhoStarts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Start"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
